--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="/images/MyImages/vesika2.jpg" style="width:45%;" class="w3-round"><br><br>
+    <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/vesika2.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
     <p class="w3-text-grey">Mustafa Selçuk Çağlar</p>
   </div>
@@ -128,10 +128,10 @@
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="/images/MyImages/park.jpg" alt="Me" style="width:100%">
+      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/park.jpg" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
-      <img src="/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" alt="Me" style="width:100%">
+      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" alt="Me" style="width:100%">
     </div>
   </div>
 
