--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <a href="aboutME.html"><img src="/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" style="width:50%"></a>
+  <a href="aboutME.html">      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" alt="Me at sea side" style="width:100%">
     <div class="w3-container w3-white">
       <a href="aboutME.html"><h4><b>Mustafa Selçuk Çağlar</b></h4></a>
       <p>Hello. My name is Mustafa Selçuk Çağlar(in English Selcuk Caglar). I am an engineer. I graduated from Mersin University with an undergraduate degree. I have done master thesis on Artificial Intelligence. Main topic of my master thesis is "Denoising audio signals with deep learning". I am currently making cool projects for myself. I love making applications and engineering.</p>
