--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- about me  -->
+<!-- about me -->
 <!DOCTYPE html>
 <html>
 <title>About Me - Mustafa Selçuk Çağlar</title>
@@ -128,10 +128,10 @@
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/park.jpg" alt="Me" style="width:100%">
+      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/park.jpg" alt="Me at park" style="width:100%">
     </div>
     <div class="w3-col m6">
-      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" alt="Me" style="width:100%">
+      <img src="https://raw.githubusercontent.com/develooper1994/selcukcaglar.github.io-master/master/images/MyImages/SeaSide_Marmara_Beykoz.jpeg" alt="Me at seaside" style="width:100%">
     </div>
   </div>
 
