--- a/index.html
+++ b/index.html
@@ -187,15 +187,16 @@
       <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:0%">0%</div>
     </div>
     <p>
-      <a href="https://www.linkedin.com/ambry/?x-li-ambry-ep=AQEltiA3ieKkIgAAAXNNGcJGRWaG80ZdREKh-4t9e4z6UyrsVw9rzQu8ixFPTlOQPWozBUgX7Ym8fsjjkTvlJchMBkolhoTc17ItUIFJKtzw1FTk5BhOMizdFpGfNUF6bNrLN0FuI5_Kmo0olmMHDKhSRhKG3QYRocXtzrnnVo8pr0Ih6bgR4PdF2WjyBerxj4UvXiijoucuIySvtZafaedKXN7N93T9JAxaAGiyoWkaLLRhVsPSI5Xi9fUbXFrOeMTLwpJ8B8qQI9lrM5LbQHBrWHViF2J5C1gJHGM3J7tDvWnd1B4BWC6kTnUbP9U6BVlN5wSsNCTWHXVnJLkjnadTUJAJU-ftbk4Ga3ceA_lIwL1BpipKbtyzZhyF_b87yzROOlkPyzteM1Uuhb2bpcQegZ5qtbThydq9Dz1oV-sJcoNXhFoWF3n5AbWmZVqbW9gUGB-YL64lChX-12fDnxkotjIgxHVyMjaG8XI350NjT7WC-ooyUjo7b6m3atzHjGOxlOWy_VJB1QTQWQCagg&x-ambry-um-filename=Profile.pdf" target="_blank" rel="noopener noreferrer"><button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
+      <a href="https://www.linkedin.com/in/mselcukcaglar/" target="_blank" rel="noopener noreferrer"><button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
         <i class="fa fa-download w3-margin-right"></i>Download Resume
       </button></a>
 
     </p>
     <hr>
 
+    <!--
     <h4>How much I charge</h4>
-    <!-- Pricing Tables -->
+    Pricing Tables
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-border w3-white w3-center w3-opacity w3-hover-opacity-off">
@@ -249,6 +250,7 @@
       </div>
     </div>
   </div>
+  -->
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-large w3-grey">
@@ -256,7 +258,7 @@
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <!--  Get an business e-mail and write it there. -->
+         <!-- Get an business e-mail and write it there. -->
         <p>selcukcaglar08@gmail.com</p>
       </div>
       <div class="w3-third w3-teal">
@@ -268,7 +270,7 @@
         <p>+905068585568</p>
       </div>
     </div>
-    <hr class="w3-opacity">
+    <!-- <hr class="w3-opacity">
     <form action="/action_page.php" target="_blank">
       <div class="w3-section">
         <label>Name</label>
@@ -286,10 +288,10 @@
         <label>Message</label>
         <input class="w3-input w3-border" type="text" name="Message" required>
       </div>
-      <!--  TODO! Javascript Part.  -->
+       TODO! Javascript Part.
       <button type="submit" class="w3-button w3-black w3-margin-bottom"><i class="fa fa-paper-plane w3-margin-right"></i>Send Message</button>
     </form>
-  </div>
+  </div> -->
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
